# image-2-ascii

./: CMakeLists.txt  run.lnk
src/: main.cpp
